# UFM

./: .gitignore  .gitmodules  LICENSE  LICENSE.txt  README.md  example_inference.py  gradio_demo.py  pyproject.toml  requirements.txt  setup.py
uniflowmatch/: cli.py
uniflowmatch/models/: base.py  ufm.py  unet_encoder.py  utils.py
uniflowmatch/utils/: flow_resizing.py  geometry.py  viz.py
