[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "uniflowmatch"
version = "0.1.0"
description = "Your project description"
authors = [{ name = "Yuchen Zhang", email = "yuchenz7@andrew.cmu.edu" }]
dependencies = [
    "torch",
    "torchvision",
    "torchaudio",
    "numpy",
    "matplotlib",
    "opencv-python",
    "flow_vis",
    "huggingface_hub",
    "einops"
]

[project.optional-dependencies]
dev = [
    "black",
    "pre-commit"
]

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | cuda
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120